# brainops

./: .dockerignore  .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  check_wrapper.sh  dev-requirements.txt  docker-compose.yml  logger_setup.py  mypy.ini  pyproject.toml  requirements.txt
activity/android/: process_android_datas.py  recup_android_datas.py
activity/android/scripts_smartphone/: .config.cfg  android_usage.sh  envoi_scp.sh
activity/db/: db_connection.py
activity/garmin/: garmin_activities.json  garmin_activities.py  garmin_client.py  garmin_heart_rate.py  garmin_main.py  garmin_summary.py
activity/listenbrainz/: apply_rules_to_unknown.py  get_listenbrainz.sh  import_listenbrainz.py  scrobble_rules.json.example  tuto.md
activity/listenbrainz/normalize/: db.py  load_json.py  podcast.py  video.py
activity/listenbrainz/scripts/: normalize_scrobbles.py
activity/machines/: .config.cfg  activity_tracker.py  import_all.sh  import_machines.py  requirements.txt
activity/trakt/: import_to_db.py  import_trakt.sh  import_watchlist.py  main.py  safe_runner.py
activity/utils/: config.py
admin/: backup_db.py  restore_db.py
brainops/: logger_setup.py  main.py
brainops/activity/: requirements.txt
brainops/activity/android/: process_android_datas.py  recup_android_datas.py
brainops/activity/db/: db_connection.py
brainops/activity/garmin/: garmin_activities.py  garmin_client.py  garmin_heart_rate.py  garmin_main.py  garmin_summary.py
brainops/activity/listenbrainz/: import_listenbrainz.py
brainops/activity/machines/: activity_tracker.py  import_all.sh  import_machines.py  process_recap.sql
brainops/activity/trakt/: import_to_db.py  import_trakt.py  import_watchlist.py  main.py  safe_runner.py  trakt_client.py
brainops/activity/utils/: config.py
brainops/admin/: backup_db.py  restore_db.py
brainops/header/: extract_yaml_header.py  get_tags_and_summary.py  header_utils.py  headers.py  join_header_body.py  join_utils.py  yaml_read.py
brainops/io/: move_error_file.py  move_uncategorized.py  note_reader.py  note_writer.py  paths.py  read_note.py  utils.py
brainops/models/: category.py  classification.py  config.py  cursor_protocol.py  db_config.py  event.py  exceptions.py  folder_context.py  folders.py  metadata.py  note.py  note_context.py  reconcile.py  temp_note.py  types.py
brainops/obsidian_scripts/: add_keywords.py  main.py
brainops/ollama/: check_ollama.py  ollama_call.py  ollama_utils.py  prompts.py
brainops/process_folders/: detect_folder_type.py  folders.py  folders_context.py  process_folder_event.py
brainops/process_import/get_type/: by_force.py  by_ollama.py  by_ollama_utils.py
brainops/process_import/gpt/: __init__.py  gpt_imports.py  import_test.py
brainops/process_import/join/: join_header_body.py  join_utils.py
brainops/process_import/normal/: import_normal.py
brainops/process_import/split/: __init__.py  large_note.py  split_qa_paragraphs.py  split_utils.py  split_windows_by_paragraphs.py  standard_note.py
brainops/process_import/synthese/: add_or_update.py  embeddings.py  embeddings_gpt.py  embeddings_normal.py  embeddings_utils.py  import_synthese.py  synthesis_utils.py
brainops/process_import/utils/: archive.py  divers.py  large_note.py  move_error_file.py  paths.py  standard_note.py
brainops/process_notes/: add_notes_to_db.py  check_duplicate.py  new_note.py  new_note_utils.py  process_single_note.py  update_note.py  utils.py  wc_and_hash.py
brainops/process_regen/: header_utils.py  regen_hub.py  regen_utils.py  synthesis_utils.py
brainops/scripts/: coherence_reconcile.py  rescue.py  run_auto_reconcile.py  semantic_search.py
brainops/services/: archives_check.py  category_coherence_check.py  coherence_checks.py  reconcile_service.py
brainops/sql/: db_connection.py  db_utils.py
brainops/sql/categs/: db_categ.py  db_categ_utils.py  db_create_categ.py  db_dictionary_categ.py  db_dynamic_categ.py  db_extract_categ.py
brainops/sql/notes/: __init__.py  (+7 more)
brainops/utils/: config.py  files.py  log_rotation.py  logger.py  normalization.py  safe_runner.py
brainops/watcher/: queue_manager.py  queue_utils.py  start.py
obsidian_scripts/: add_keywords.py  check_script.py  main.py  requirements.txt
z_old/: fix_imports.py  git_repair.sh
(+177 files in other folders)
