[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainops"
version = "0.1.0"
description = "obs+act"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["brainops"]

[tool.pylint.'MASTER']
ignore = ["z_old", "docker"]

[tool.isort]
profile = "black"
line_length = 120         # aligne-toi avec Black (par défaut 88)
src_paths = ["brainops"] # ton package
known_first_party = ["brainops"]

[tool.mypy]
python_version = "3.11"
python_executable = "/home/pipo/envs/bo_obs/bin/python"
pretty = true
show_error_codes = true
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

# exclusions
exclude = [
  "z_old",
  "docker",
]

# Strict de base
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
disallow_untyped_calls = true
disallow_any_generics = true
warn_unused_configs = true
warn_no_return = true   # 👉 signale les fonctions sans return sur tous les chemins

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
follow_imports = "skip"

# (Optionnel) si tu utilises numpy partout, ça réduit le bruit:
[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true
follow_imports = "skip"

